# locus

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  copier.yml  dprint.json  llms.txt  mise.toml  mkdocs.yml  proposal_mercenary_pivot.md  pyproject.toml
.agents/skills/automation/autopilot-impl/: SKILL.md
.agents/skills/automation/autopilot-plan/: SKILL.md
.agents/skills/automation/commit/: SKILL.md
.agents/skills/automation/worktree/: SKILL.md
.agents/skills/development/arch-diagram/: SKILL.md
.agents/skills/development/code-refactor/: SKILL.md
.agents/skills/development/code-review/: SKILL.md
.agents/skills/development/coderabbit/: SKILL.md
.agents/skills/development/coding-standards/: SKILL.md
.agents/skills/development/doc-lookup/: SKILL.md
.agents/skills/development/tdd-workflow/: SKILL.md
.agents/skills/development/test-generator/: SKILL.md
.agents/skills/maintenance/smart-update/: SKILL.md
.agents/skills/maintenance/update-agents-md/: SKILL.md
.agents/skills/shared/: knowledge-tiers.md  obsidian-knowledge.md
.agents/skills/utility/: semantic-edit.md
.claude/commands/: apply.md  approve.md  archive.md  break-to-tasks.md  coderabbit.md  design.md  explore.md  fast-draft.md  fast-plan.md  instinct-evolve.md  instinct-export.md  instinct-import.md  instinct-promote.md  instinct-status.md  pipeline-status.md  propose.md  rollback.md  serena-init.md  specify.md  sync-skills.md  validate.md  verify.md
.claude/instinctv2/: config.json
.claude/instinctv2/agents/: artifact-validator.agent.md  instinct-observer.agent.md  pipeline-advance.agent.md
.claude/instinctv2/hooks/: observe.sh
.claude/instinctv2/scripts/: detect-project.sh  distill.py  instinct-cli.py
.claude/rules/: obsidian-knowledge.md  search-tools.md  serena.md
.claude/skills/: apply  approve  archive  code-refactor  context7-mcp  design  doc-lookup  pipeline-status  propose  specify  update-claude-md  verify
.engine/: config.yaml  hooks.yaml
.engine/changes/001-portafolio-web-fase-1/: design.md  proposal.md  tasks.md
.engine/changes/002-portafolio-identidad-ux/: design.md  proposal.md  tasks.md
.engine/changes/007-forge-showcase/: proposal.md  tasks.md
.engine/schemas/: README.md  design.yaml  hooks.schema.yaml  proposal.yaml  spec.yaml  tasks.yaml
.engine/specs/content/: spec.md
.gemini/: settings.json
.gemini/commands/: apply.toml  approve.toml  archive.toml  break-to-tasks.toml  coderabbit.toml  design.toml  explore.toml  fast-draft.toml  fast-plan.toml  instinct-evolve.toml  instinct-export.toml  instinct-import.toml  instinct-promote.toml  instinct-status.toml  pipeline-status.toml  propose.toml  rollback.toml  serena-init.toml  specify.toml  sync-skills.toml  validate.toml  verify.toml
.gemini/skills/: arch-diagram  article-writing  break-to-tasks  code-review  coderabbit  coding-standards  rollback  tdd-workflow  test-generator  update-llms-txt  validate
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
.serena/: project.yml  ty-lsp.sh
docs/: CNAME  cv.md  index.md
docs/forge/: index.md
docs/laboratorio/: index.md
docs/vigilia/: index.md
docs/vigilia-edge/: index.md
tests/unit/: test_cv_page.py  test_mercenary_pivot.py  test_mkdocs_config.py  test_pages_content.py  test_schemas.py
(+27 files in other folders)
