[build-system]
requires = ["uv_build>=0.6.0,<0.7.0"]
build-backend = "uv_build"

[project]
name = "locus"
version = "0.1.2"
description = "Sitio Web Portafolio - Locus"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-timeout>=2.4.0",
  "ruff>=0.15.6",
  "dprint-py>=0.52.0.0",
]
docs = [
  "mkdocs-material>=9.6.7",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
  ".venv",
  "venv",
  ".git",
  "__pycache__",
  ".pytest_cache",
  ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "S"]
ignore = ["N802", "N805", "RUF001", "RUF002"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--disable-warnings",
  "-x",
  "--timeout=30",
]
markers = [
  "unit: Unit tests (isolated, no I/O, < 100ms each)",
  "integration: Integration tests (2+ components, may use filesystem)",
  "e2e: End-to-end tests (full system, runs just commands)",
  "slow: Slow running tests",
]
